--- a/photo/templates/photo/list.html
+++ b/photo/templates/photo/list.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+{% block title %}- List {% endblock %}
+
+{% block content %}
 {% for post in photos %}
     <div class ="row">
         <div class="col-md-2"></div>
@@ -6,9 +10,10 @@
             <button type="button" class="btn btn-xs btn-info">{{post.author.username}}</button>
             <p>{{post.text|linebreaksbr}}</p>
             <p class="text-right">
-                <a href="{ % url 'photo:photo_detail' pk=post.id %}" class="btn btn-xs btn-success"></a>
+                <a href="{% url 'photo:photo_detail' pk=post.id %}" class="btn btn-xs btn-success">댓글달기</a>
             </p>
         </div>
         <div class="col-md-2"></div>
     </div>
 {% endfor %}
+{% endblock %}
